--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    background: rgb(7,120,111);
+background: linear-gradient(90deg, rgba(7,120,111,1) 0%, rgba(8,102,82,1) 14%, rgba(8,97,80,1) 20%, rgba(8,90,77,1) 34%, rgba(2,5,41,1) 98%);
+    /* animation: body_mr 0.5s infinite; */
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+}
